# real_validation_saferl_treec

./: .gitattributes  .gitignore  README.md  debug_model.out  reproduce_paper.py  requirements.txt  requirements_conda.txt  requirements_pip.txt
data/ems_models/forecasting/: ev_model_detention_2024-01-01_0000_2024-04-01_0000.pkl  ev_model_soc_2024-01-01_0000_2024-04-01_0000.pkl  load_model_2024-01-01_0000_2024-04-01_0000.pkl
data/example_day/: RBC_house3_5s_30th_may.csv
data/houses/: update_to_new_simugrid_version.py
data/houses/common_env/: SFH19_2023_2024_15min_original.csv  add_common_env.py  ev_schedule_2019.csv  ev_schedule_2023_2024.csv  ev_schedule_2023_2024_save.csv  ev_schedule_2023_2024_switch_1500.csv  ev_schedule_2023_2024_switch_1500_save.csv  ev_schedule_jan_mar_2023_2024.csv
data/results/experiment_simulation/: elec_tariffs.json  house_1_MPC_grid.csv  house_2_RBC_grid.csv  house_2_RL_grid.csv  house_2_Tree_grid.csv  house_3_RBC_grid.csv  house_3_RL_grid.csv  house_3_Tree_grid.csv  house_5_RL_grid.csv
plot_results/: plot_all_figures.py  plot_comparison_results.py  plot_example_day.py  plot_rl_improvement.py  plot_safety_layer.py  plot_tensorboard_logs.py
plot_results/tensorboard_rl/: 20240731_results_plot (paper).ipynb  20240731_safety_layer_plots (paper).ipynb
src/forecasting/: all_models.py  demo.ipynb  model_forecaster.py
src/plot_results/: plot_all_figures.py  plot_comparison_results.py  plot_example_day.py  plot_rl_improvement.py  plot_safety_layer.py  plot_tensorboard_logs.py
src/reproduce_svl/: analysis_switch_hour.py  custom_classes.py  custom_experiment.py  generate_config_train.py  log_obs_act.py  mpc.py  plot_results_paper.py  reproduce_experiment.py  reproduce_experiment_gym.py  run_houses.py  run_switch_results.py
src/training_trees/: evaluation_func.py  hpc_run.py  hpc_training.sh  input_function.py  simulate_house_1.py  train.py
submodules/energy-system-simulation/: pyproject.toml
submodules/energy-system-simulation/simugrid/assets/: __init__.py  asset.py  battery.py  charger.py  consumer.py  public_grid.py  solar_pv.py
submodules/energy-system-simulation/simugrid/management/: manager.py  rational.py
submodules/energy-system-simulation/simugrid/misc/: log_plot_micro.py  scenarios.py
submodules/energy-system-simulation/simugrid/rewards/: example.py  reward.py
submodules/energy-system-simulation/simugrid/simulation/: action.py  config_parser.py  environment.py
submodules/treec/: setup.py
(+3554 files in other folders)
